Stashing blog drop down changes for now

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@ out/
 # Bower dependencies
 src/raw/vendor
 
+# Dev
+src/documents/article
+src/files/associated-files
+src/files/images
+
 # =====================================
 # Ignore select content from the external repository.
 # =====================================
